# Boids

./: .gitignore  README.md  boids.py  display.py  input_boxes.py  main.py  pyproject.toml
Animations/: EXAMPLE2_parameters.txt  EXAMPLE3_parameters.txt
Utils/: display.py  save2gif.py
boids/: __main__.py  main.py
boids/Utils/: boids.py  display.py  input_boxes.py  save2gif.py
